fix: 删除多余文件

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,23 @@
+<!--
+ * @Descripttion:
+ * @Author: voanit
+ * @Date: 2022-08-31 11:31:06
+ * @LastEditors: voanit
+ * @LastEditTime: 2022-09-05 09:47:59
+-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>超级店长</title>
-	<link rel="icon" href="/favicon.ico">
+	<title>Docker前端自动化构建部署</title>
+	<!-- <link rel="icon" href="/favicon.ico"> -->
 	<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_2290482_3perjz6bnxb.css">
 </head>
+
 <body>
 	<div id="root" style="width: 100vw;"></div>
 </body>
+
 </html>
