fix: 修改favicon.ico

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
  * @Author: voanit
  * @Date: 2022-08-31 11:31:06
  * @LastEditors: voanit
- * @LastEditTime: 2022-09-05 09:47:59
+ * @LastEditTime: 2022-09-05 10:20:08
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Docker前端自动化构建部署</title>
-	<!-- <link rel="icon" href="/favicon.ico"> -->
+	<link rel="icon" href="/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_2290482_3perjz6bnxb.css">
 </head>
 
